Move main executable to examples dir.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,10 +25,11 @@ if (CMAKE_C_COMPILER_ID STREQUAL "GNU")
 endif()
 
 
-add_executable(pico_extmem 
-    src/main.cpp
+add_library(pico_extmem 
     src/spiram.cpp
     src/extmem_mapper.cpp
 )
 target_include_directories(pico_extmem PUBLIC src/include)
 target_link_libraries(pico_extmem pico_stdlib pico_stdio_usb hardware_exception hardware_spi)
+
+add_subdirectory(examples/)
